Fix image overlap

--- a/css/style.css
+++ b/css/style.css
@@ -188,7 +188,7 @@ height: 80px;}
     height: 215px;
   }
   .head-rubikal .img-head img{
-    margin-top: -41px;
+    margin-top: -15px;
     width: 466px;
     margin-left: -17px;
     position: relative;
